--- a/assets/custom.css
+++ b/assets/custom.css
@@ -431,7 +431,7 @@ a:hover{
 }
 .contact-caption {
     background-color: #fefefe;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     box-shadow: 0px 0px 50px 20px #29646e;
     padding-top: 3%;
     padding-bottom: 0;
