--- a/assets/custom.css
+++ b/assets/custom.css
@@ -289,7 +289,8 @@ button:focus {
     overflow: hidden;
     padding-top: 8%;
     padding-bottom: 25%;
-    background-color: #fff;
+    background: linear-gradient(180deg, rgb(242 245 249) 52%, rgba(255,255,255,1) 63%);
+    /* background-color: #fff; */
 }
 .img-exp{
     position: absolute;
